--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -849,11 +849,32 @@ p {
   position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../../assets/img/gr.png");
+  background-image: url("../../assets/img/placa-seguradora.png");
   animation: placa-gr 3s ease-in;
   animation-fill-mode: forwards;
   bottom: 28vw;
+}
+/* line 678, ../../sass/blocks/_scene.scss */
+.game__scenario.--step4 .game__truck__layer2:after {
   left: 37.4vw;
+}
+@media (min-width: 910px) {
+  /* line 672, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step4 .game__truck__layer2:after {
+    left: 37.4vw;
+  }
+}
+@media screen and (min-width: 1366px) {
+  /* line 672, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step4 .game__truck__layer2:after {
+    left: 30.4vw;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 672, ../../sass/blocks/_scene.scss */
+  .game__scenario.--step4 .game__truck__layer2:after {
+    left: 37.4vw;
+  }
 }
 @keyframes placa-gr {
   from {
@@ -861,7 +882,7 @@ p {
     height: 0;
   }
   to {
-    width: 4vw;
+    width: 10vw;
     height: 6vw;
   }
   from,
@@ -882,59 +903,59 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 721, ../../sass/blocks/_scene.scss */
+/* line 736, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__scene,
 .game__scenario.--step5 .game__mountains {
   left: -76vw;
 }
 @media (min-width: 910px) {
-  /* line 717, ../../sass/blocks/_scene.scss */
+  /* line 732, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__scene,
   .game__scenario.--step5 .game__mountains {
     left: -116vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 717, ../../sass/blocks/_scene.scss */
+  /* line 732, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__scene,
   .game__scenario.--step5 .game__mountains {
     left: -66vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 717, ../../sass/blocks/_scene.scss */
+  /* line 732, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__scene,
   .game__scenario.--step5 .game__mountains {
     left: -76vw;
   }
 }
-/* line 738, ../../sass/blocks/_scene.scss */
+/* line 753, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck {
   z-index: 1;
 }
-/* line 740, ../../sass/blocks/_scene.scss */
+/* line 755, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck {
   left: 45vw;
 }
 @media (min-width: 910px) {
-  /* line 738, ../../sass/blocks/_scene.scss */
+  /* line 753, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__truck {
     left: 62vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 738, ../../sass/blocks/_scene.scss */
+  /* line 753, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__truck {
     left: 45vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 738, ../../sass/blocks/_scene.scss */
+  /* line 753, ../../sass/blocks/_scene.scss */
   .game__scenario.--step5 .game__truck {
     left: 45vw;
   }
 }
-/* line 758, ../../sass/blocks/_scene.scss */
+/* line 773, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck:before {
   content: '';
   display: block;
@@ -968,7 +989,7 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 794, ../../sass/blocks/_scene.scss */
+/* line 809, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck__layer:after {
   content: '';
   display: block;
@@ -991,7 +1012,7 @@ p {
     height: 8vw;
   }
 }
-/* line 816, ../../sass/blocks/_scene.scss */
+/* line 831, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck__layer:before {
   content: '';
   display: block;
@@ -1013,7 +1034,7 @@ p {
     height: 5vw;
   }
 }
-/* line 838, ../../sass/blocks/_scene.scss */
+/* line 853, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__truck__layer2:before {
   content: '';
   display: block;
@@ -1052,59 +1073,59 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 886, ../../sass/blocks/_scene.scss */
+/* line 901, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__scene,
 .game__scenario.--step6 .game__mountains {
   left: -106vw;
 }
 @media (min-width: 910px) {
-  /* line 882, ../../sass/blocks/_scene.scss */
+  /* line 897, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__scene,
   .game__scenario.--step6 .game__mountains {
     left: -116vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 882, ../../sass/blocks/_scene.scss */
+  /* line 897, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__scene,
   .game__scenario.--step6 .game__mountains {
     left: -114vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 882, ../../sass/blocks/_scene.scss */
+  /* line 897, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__scene,
   .game__scenario.--step6 .game__mountains {
     left: -106vw;
   }
 }
-/* line 903, ../../sass/blocks/_scene.scss */
+/* line 918, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__truck {
   z-index: 1;
 }
-/* line 905, ../../sass/blocks/_scene.scss */
+/* line 920, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__truck {
   left: 60vw;
 }
 @media (min-width: 910px) {
-  /* line 903, ../../sass/blocks/_scene.scss */
+  /* line 918, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__truck {
     left: 62vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 903, ../../sass/blocks/_scene.scss */
+  /* line 918, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__truck {
     left: 45vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 903, ../../sass/blocks/_scene.scss */
+  /* line 918, ../../sass/blocks/_scene.scss */
   .game__scenario.--step6 .game__truck {
     left: 60vw;
   }
 }
-/* line 926, ../../sass/blocks/_scene.scss */
+/* line 941, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__truck__layer:after {
   content: '';
   display: block;
@@ -1127,7 +1148,7 @@ p {
     height: 8vw;
   }
 }
-/* line 948, ../../sass/blocks/_scene.scss */
+/* line 963, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__truck__layer:before {
   content: '';
   display: block;
@@ -1149,7 +1170,7 @@ p {
     height: 5vw;
   }
 }
-/* line 970, ../../sass/blocks/_scene.scss */
+/* line 985, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1188,59 +1209,59 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 1017, ../../sass/blocks/_scene.scss */
+/* line 1032, ../../sass/blocks/_scene.scss */
 .game__scenario.--step7 .game__scene,
 .game__scenario.--step7 .game__mountains {
   left: -146vw;
 }
 @media (min-width: 910px) {
-  /* line 1014, ../../sass/blocks/_scene.scss */
+  /* line 1029, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__scene,
   .game__scenario.--step7 .game__mountains {
     left: -236vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1014, ../../sass/blocks/_scene.scss */
+  /* line 1029, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__scene,
   .game__scenario.--step7 .game__mountains {
     left: -114vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1014, ../../sass/blocks/_scene.scss */
+  /* line 1029, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__scene,
   .game__scenario.--step7 .game__mountains {
     left: -146vw;
   }
 }
-/* line 1034, ../../sass/blocks/_scene.scss */
+/* line 1049, ../../sass/blocks/_scene.scss */
 .game__scenario.--step7 .game__truck {
   z-index: 1;
 }
-/* line 1036, ../../sass/blocks/_scene.scss */
+/* line 1051, ../../sass/blocks/_scene.scss */
 .game__scenario.--step7 .game__truck {
   left: 62vw;
 }
 @media (min-width: 910px) {
-  /* line 1034, ../../sass/blocks/_scene.scss */
+  /* line 1049, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__truck {
     left: 62vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1034, ../../sass/blocks/_scene.scss */
+  /* line 1049, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__truck {
     left: 85vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1034, ../../sass/blocks/_scene.scss */
+  /* line 1049, ../../sass/blocks/_scene.scss */
   .game__scenario.--step7 .game__truck {
     left: 62vw;
   }
 }
-/* line 1056, ../../sass/blocks/_scene.scss */
+/* line 1071, ../../sass/blocks/_scene.scss */
 .game__scenario.--step7 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1279,59 +1300,59 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 1104, ../../sass/blocks/_scene.scss */
+/* line 1119, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__scene,
 .game__scenario.--step8 .game__mountains {
   left: -219vw;
 }
 @media (min-width: 910px) {
-  /* line 1101, ../../sass/blocks/_scene.scss */
+  /* line 1116, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__scene,
   .game__scenario.--step8 .game__mountains {
     left: -310vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1101, ../../sass/blocks/_scene.scss */
+  /* line 1116, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__scene,
   .game__scenario.--step8 .game__mountains {
     left: -180vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1101, ../../sass/blocks/_scene.scss */
+  /* line 1116, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__scene,
   .game__scenario.--step8 .game__mountains {
     left: -219vw;
   }
 }
-/* line 1121, ../../sass/blocks/_scene.scss */
+/* line 1136, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__truck {
   z-index: 1;
 }
-/* line 1123, ../../sass/blocks/_scene.scss */
+/* line 1138, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__truck {
   left: 28vw;
 }
 @media (min-width: 910px) {
-  /* line 1121, ../../sass/blocks/_scene.scss */
+  /* line 1136, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__truck {
     left: 28vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1121, ../../sass/blocks/_scene.scss */
+  /* line 1136, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__truck {
     left: 67vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1121, ../../sass/blocks/_scene.scss */
+  /* line 1136, ../../sass/blocks/_scene.scss */
   .game__scenario.--step8 .game__truck {
     left: 28vw;
   }
 }
-/* line 1141, ../../sass/blocks/_scene.scss */
+/* line 1156, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__truck:after, .game__scenario.--step8 .game__truck:before {
   content: '';
   display: block;
@@ -1341,7 +1362,7 @@ p {
   background-position: center center;
   z-index: 2;
 }
-/* line 1154, ../../sass/blocks/_scene.scss */
+/* line 1169, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1380,60 +1401,60 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 1202, ../../sass/blocks/_scene.scss */
+/* line 1217, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__scene,
 .game__scenario.--step9 .game__mountains {
   left: -219vw;
 }
 @media (min-width: 910px) {
-  /* line 1199, ../../sass/blocks/_scene.scss */
+  /* line 1214, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__scene,
   .game__scenario.--step9 .game__mountains {
     left: -310vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1199, ../../sass/blocks/_scene.scss */
+  /* line 1214, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__scene,
   .game__scenario.--step9 .game__mountains {
     left: -180vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1199, ../../sass/blocks/_scene.scss */
+  /* line 1214, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__scene,
   .game__scenario.--step9 .game__mountains {
     left: -219vw;
   }
 }
-/* line 1219, ../../sass/blocks/_scene.scss */
+/* line 1234, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck {
   z-index: 1;
   left: 75vw;
 }
-/* line 1223, ../../sass/blocks/_scene.scss */
+/* line 1238, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck {
   left: 55vw;
 }
 @media (min-width: 910px) {
-  /* line 1219, ../../sass/blocks/_scene.scss */
+  /* line 1234, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__truck {
     left: 55vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1219, ../../sass/blocks/_scene.scss */
+  /* line 1234, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__truck {
     left: 84vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1219, ../../sass/blocks/_scene.scss */
+  /* line 1234, ../../sass/blocks/_scene.scss */
   .game__scenario.--step9 .game__truck {
     left: 55vw;
   }
 }
-/* line 1240, ../../sass/blocks/_scene.scss */
+/* line 1255, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck:after, .game__scenario.--step9 .game__truck:before {
   content: '';
   display: block;
@@ -1443,7 +1464,7 @@ p {
   background-position: center center;
   z-index: 2;
 }
-/* line 1251, ../../sass/blocks/_scene.scss */
+/* line 1266, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck:after {
   bottom: -2.8vh;
   left: 0.2vw;
@@ -1462,7 +1483,7 @@ p {
     width: 3vw;
   }
 }
-/* line 1272, ../../sass/blocks/_scene.scss */
+/* line 1287, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck:before {
   background-image: url("../../assets/img/caixas.png");
   z-index: 1;
@@ -1483,7 +1504,7 @@ p {
     height: 6vh;
   }
 }
-/* line 1298, ../../sass/blocks/_scene.scss */
+/* line 1313, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck__layer:after {
   content: '';
   display: block;
@@ -1505,7 +1526,7 @@ p {
     width: 5vw;
   }
 }
-/* line 1320, ../../sass/blocks/_scene.scss */
+/* line 1335, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1544,7 +1565,7 @@ p {
     transform: translate3d(0, 0, 0);
   }
 }
-/* line 1360, ../../sass/blocks/_scene.scss */
+/* line 1375, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__truck__layer2::before {
   content: '';
   display: block;
@@ -1566,59 +1587,59 @@ p {
     height: 16vw;
   }
 }
-/* line 1389, ../../sass/blocks/_scene.scss */
+/* line 1403, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__scene,
 .game__scenario.--step10 .game__mountains {
   left: -244vw;
 }
 @media (min-width: 910px) {
-  /* line 1386, ../../sass/blocks/_scene.scss */
+  /* line 1400, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
     left: -244vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1386, ../../sass/blocks/_scene.scss */
+  /* line 1400, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
     left: -228vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1386, ../../sass/blocks/_scene.scss */
+  /* line 1400, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__scene,
   .game__scenario.--step10 .game__mountains {
     left: -244vw;
   }
 }
-/* line 1406, ../../sass/blocks/_scene.scss */
+/* line 1420, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__truck {
   z-index: 1;
 }
-/* line 1408, ../../sass/blocks/_scene.scss */
+/* line 1422, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__truck {
   left: 72vw;
 }
 @media (min-width: 910px) {
-  /* line 1406, ../../sass/blocks/_scene.scss */
+  /* line 1420, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__truck {
     left: 75vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1406, ../../sass/blocks/_scene.scss */
+  /* line 1420, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__truck {
     left: 72vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1406, ../../sass/blocks/_scene.scss */
+  /* line 1420, ../../sass/blocks/_scene.scss */
   .game__scenario.--step10 .game__truck {
     left: 72vw;
   }
 }
-/* line 1428, ../../sass/blocks/_scene.scss */
+/* line 1442, ../../sass/blocks/_scene.scss */
 .game__scenario.--step10 .game__truck__layer2:after {
   content: '';
   display: block;
@@ -1644,59 +1665,59 @@ p {
     height: 6vh;
   }
 }
-/* line 1461, ../../sass/blocks/_scene.scss */
+/* line 1475, ../../sass/blocks/_scene.scss */
 .game__scenario.--step11 .game__scene,
 .game__scenario.--step11 .game__mountains {
   left: -253vw;
 }
 @media (min-width: 910px) {
-  /* line 1458, ../../sass/blocks/_scene.scss */
+  /* line 1472, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__scene,
   .game__scenario.--step11 .game__mountains {
     left: -410vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1458, ../../sass/blocks/_scene.scss */
+  /* line 1472, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__scene,
   .game__scenario.--step11 .game__mountains {
     left: -237vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1458, ../../sass/blocks/_scene.scss */
+  /* line 1472, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__scene,
   .game__scenario.--step11 .game__mountains {
     left: -253vw;
   }
 }
-/* line 1478, ../../sass/blocks/_scene.scss */
+/* line 1492, ../../sass/blocks/_scene.scss */
 .game__scenario.--step11 .game__truck {
   z-index: 1;
 }
-/* line 1480, ../../sass/blocks/_scene.scss */
+/* line 1494, ../../sass/blocks/_scene.scss */
 .game__scenario.--step11 .game__truck {
   left: 80vw;
 }
 @media (min-width: 910px) {
-  /* line 1478, ../../sass/blocks/_scene.scss */
+  /* line 1492, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__truck {
     left: 82vw;
   }
 }
 @media screen and (min-width: 1366px) {
-  /* line 1478, ../../sass/blocks/_scene.scss */
+  /* line 1492, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__truck {
     left: 82vw;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 1478, ../../sass/blocks/_scene.scss */
+  /* line 1492, ../../sass/blocks/_scene.scss */
   .game__scenario.--step11 .game__truck {
     left: 80vw;
   }
 }
-/* line 1500, ../../sass/blocks/_scene.scss */
+/* line 1514, ../../sass/blocks/_scene.scss */
 .game__scenario.--step11 .game__truck__layer2:before {
   content: '';
   display: block;
