--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -8,6 +8,7 @@
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
+    will-change: animation;
 }
 
 
@@ -36,6 +37,7 @@
 
     &.--is-active {
         display: block;
+        will-change: animation;
         animation: typing 5s steps(400,end);
     }
 
@@ -143,6 +145,7 @@
             background-image: url('../../assets/img/pesquisa.png');
             bottom: 1.8vh;
             left: 9vw;
+            will-change: animation;
             animation: pesquisa 3s ease-in;
             animation-fill-mode: forwards;
 
@@ -168,7 +171,7 @@
             left: 3vw;
             width: 5vw;
             height: 5vw;
-
+            will-change: animation;
             animation: score 6s ease-in;
             animation-fill-mode: forwards;
             
@@ -207,7 +210,7 @@
             
             bottom: 8vw;
             left: 14vw;
-
+            will-change: animation;
             animation: cronometro 3s ease-in;
             animation-fill-mode: forwards;
             
@@ -251,6 +254,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-score.png');
+            will-change: animation;
             animation: placa-score 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 17vw;
@@ -318,6 +322,7 @@
             background-image: url('../../assets/img/pesquisa.png');
             bottom: 1.8vh;
             left: 9vw;
+            will-change: animation;
             animation: pesquisa 3s ease-in;
             animation-fill-mode: forwards;
 
@@ -343,7 +348,7 @@
             left: 3vw;
             width: 5vw;
             height: 5vw;
-
+            will-change: animation;
             animation: score 6s ease-in;
             animation-fill-mode: forwards;
             
@@ -390,6 +395,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-score.png');
+            will-change: animation;
             animation: placa-score 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 17vw;
@@ -456,6 +462,7 @@
             background-image: url('../../assets/img/hand-check-phone.png');
             bottom: 1.8vh;
             left: 9vw;
+            will-change: animation;
             animation: phone-check 6s ease-out;
             
             @keyframes phone-check {
@@ -479,6 +486,7 @@
             width: 5vw;
             height: 5vw;
             left: 2.4vw;
+            will-change: animation;
             animation-fill-mode: forwards;
             animation: averb 8s;
             
@@ -511,6 +519,7 @@
             @include animation-objects;
             background-image: url('../../assets/img/sm-averb-xml.png');
             bottom: 8vh;
+            will-change: animation;
             animation: documentos 8s;
             animation-fill-mode: forwards;
             
@@ -553,6 +562,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-embarcador.png');
+            will-change: animation;
             animation: embarcador 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 12.3vw;
@@ -617,6 +627,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/sm.png');
+            will-change: animation;
             animation-fill-mode: forwards;
             animation: docs-leave 5s ease-out;
             
@@ -644,6 +655,7 @@
         &:before {
             @include animation-objects;
             background-image: url('../../assets/img/averb-logo.png');
+            will-change: animation;
             animation-fill-mode: forwards;
             animation: averb-leave 5s;
             
@@ -672,6 +684,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-seguradora.png');
+            will-change: animation;
             animation: placa-gr 3s ease-in;
             animation-fill-mode: forwards;
             bottom: 28vw;
@@ -777,6 +790,7 @@
             width: 5vw;
             height: 5vw;
             left: 2.4vw;
+            will-change: animation;
             animation: gpmobi 8s;
             animation-fill-mode: forwards;
             
@@ -811,6 +825,7 @@
             background-image: url('../../assets/img/curva-perigosa.png');
             bottom: 1.8vh;
             left: 9vw;
+            will-change: animation;
             animation: curva-perigosa 3s ease-in;
             animation-fill-mode: forwards;
 
@@ -833,6 +848,7 @@
             background-image: url('../../assets/img/speaker.png');
             bottom: 8vw;
             left: 11vw;
+            will-change: animation;
             animation: speaker-montanha 6s ease-in;
 
             @keyframes speaker-montanha {
@@ -853,6 +869,7 @@
         &:before {
             @include animation-objects;
             background-image: url('../../assets/img/placa-curvas-perigosas.png');
+            will-change: animation;
             animation: placa-curvas 5s ease-in;
             animation-fill-mode: forwards;
             bottom: 11.8vw;
@@ -943,6 +960,7 @@
             background-image: url('../../assets/img/area-indigena.png');
             bottom: 1.8vh;
             left: 9vw;
+            will-change: animation;
             animation: area-indigena 3s ease-in;
             animation-fill-mode: forwards;
 
@@ -965,6 +983,7 @@
             background-image: url('../../assets/img/speaker.png');
             bottom: 8vw;
             left: 11vw;
+            will-change: animation;
             animation: speaker 6s ease-in;
 
             @keyframes speaker {
@@ -985,6 +1004,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-area-indigena.png');
+            will-change: animation;
             animation: indigena 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 10vw;
@@ -1071,6 +1091,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-almoco.png');
+            will-change: animation;
             animation: almoco 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 10vw;
@@ -1113,6 +1134,11 @@
 
 .game__scenario.--step8 {
     
+    & {
+        transition: background-color 1s ease-in;
+        background-color: $night;
+    }
+
     .game__scene,
     .game__mountains {
         
@@ -1169,6 +1195,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-pernoite.png');
+            will-change: animation;
             animation: placa-pernoite 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 10vw;
@@ -1211,6 +1238,11 @@
 
 .game__scenario.--step9 {
     
+    & {
+        transition: background-color 1s ease-in;
+        background-color: $night;
+    }
+
     .game__scene,
     .game__mountains {
         
@@ -1287,6 +1319,7 @@
         &:before {
             background-image: url('../../assets/img/caixas.png');
             z-index: 1;
+            will-change: animation;
             animation: caixas 5s ease-in;
             animation-fill-mode: forwards;
 
@@ -1312,6 +1345,11 @@
 
 .game__scenario.--step10 {
     
+    & {
+        transition: background-color 1s ease-in;
+        background-color: $night;
+    }
+
     .game__scene,
     .game__mountains {
         
@@ -1369,6 +1407,7 @@
             left: 0.2vw;
             background-image: url('../../assets/img/smoke.png');
             animation: smoke 8s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            will-change: animation;
             
             @keyframes smoke {
                 from {
@@ -1388,6 +1427,7 @@
         &:before {
             background-image: url('../../assets/img/caixas.png');
             z-index: 1;
+            will-change: animation;
             animation: caixas 5s ease-in;
             animation-fill-mode: forwards;
 
@@ -1414,6 +1454,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/nfe.png');
+            will-change: animation;
             animation: nota-fiscal 2s ease-in;
             animation-fill-mode: forwards;
             bottom: 5vw;
@@ -1436,6 +1477,7 @@
         &:after {
             @include animation-objects;
             background-image: url('../../assets/img/placa-regulador-de-sinistro.png');
+            will-change: animation;
             animation: placa-sinistro 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 10vw;
@@ -1477,6 +1519,7 @@
             @include animation-objects;
             background-image: url('../../assets/img/flash.png');
             bottom: -16vw;
+            will-change: animation;
             animation: flash 3s ease-in;
             animation-fill-mode: forwards;
             
@@ -1498,6 +1541,11 @@
 
 .game__scenario.--step11 {
     
+    & {
+        transition: background-color 1s ease-in;
+        background-color: $night;
+    }
+
     .game__scene,
     .game__mountains {
         
@@ -1544,6 +1592,7 @@
             @include animation-objects;
             background-image: url('../../assets/img/carga.png');
             z-index: -1;
+            will-change: animation;
             animation: carga-transporte 5s ease-in;
             animation-fill-mode: forwards;
             
@@ -1570,6 +1619,11 @@
 
 .game__scenario.--step12 {
     
+    & {
+        transition: background-color 1s ease-in;
+        background-color: $night;
+    }
+
     .game__scene,
     .game__mountains {
         
@@ -1615,6 +1669,7 @@
         &:before {
             @include animation-objects;
             background-image: url('../../assets/img/placa-comprador.png');
+            will-change: animation;
             animation: placa-score 6s ease-in;
             animation-fill-mode: forwards;
             bottom: 17vw;
